--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </section>
 
     <footer>
-      <p>Acme Web Deisgn, Copyright &copy; 2017</p>
+      <p>Tex Ex Deisgn, Copyright &copy; 2018</p>
     </footer>
   </body>
 </html>
