--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@ Aliquam eget pharetra diam. Nulla placerat lorem at turpis tempor, vel ultrices 
     </section>
 
     <footer>
-      <p>Acme Web Deisgn, Copyright &copy; 2017</p>
+      <p>Tex Ex Deisgn, Copyright &copy; 2018</p>
     </footer>
   </body>
 </html>
