--- a/services.html
+++ b/services.html
@@ -82,7 +82,7 @@
     </section>
 
     <footer>
-      <p>Acme Web Deisgn, Copyright &copy; 2017</p>
+      <p>Tex Ex Deisgn, Copyright &copy; 2018</p>
     </footer>
   </body>
 </html>
